homework-18/files/app/deployment-homework-18.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-app
  namespace: homework-18
  labels:
    app: orders-app
spec:
  selector:
    matchLabels:
      app: orders-app
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: orders-app
    spec:
      containers:            
        - image: christinagorina/homework-18:1.0.0
          name: orderscontainer
          ports:
            - containerPort: 8085         
          imagePullPolicy: IfNotPresent
