homework-18/files/app/service-homework-18.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-app
  namespace: homework-18
spec:
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: 8085
  selector:
    app: orders-app
