homework-18/files/app/ingress-homework-18.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orders-app
  namespace: homework-18
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: orders-app
                port:
                  number: 8888
            pathType: Prefix
            path: /
